[project]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreBrusco",email = "andreb.estat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "langchain-openai (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
